--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="010_PrimeNumber.cpp" />
+    <ClCompile Include="011_Eratos.cpp" />
     <ClCompile Include="06_ABC.cpp" />
     <ClCompile Include="01_Carrot.cpp" />
     <ClCompile Include="05_JadenCase.cpp" />
