--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="010_PrimeNumber.cpp" />
     <ClCompile Include="011_Eratos.cpp" />
+    <ClCompile Include="012_PipeCut.cpp" />
     <ClCompile Include="06_ABC.cpp" />
     <ClCompile Include="01_Carrot.cpp" />
     <ClCompile Include="05_JadenCase.cpp" />
