--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="011_Eratos.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="012_PipeCut.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
