--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -57,5 +57,11 @@
     <ClCompile Include="14_3Multiples.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="15_ParenthesisString.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="16_Zero.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
