--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="14_3Multiples.cpp" />
     <ClCompile Include="15_ParenthesisString.cpp" />
     <ClCompile Include="16_Zero.cpp" />
+    <ClCompile Include="17_DP.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
