--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="16_Zero.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="17_DP.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
