--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="15_ParenthesisString.cpp" />
     <ClCompile Include="16_Zero.cpp" />
     <ClCompile Include="17_DP.cpp" />
+    <ClCompile Include="18_RGB_house.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
