--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="17_DP.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="18_RGB_house.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
