--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="18_RGB_house.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="19_Quad.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
