--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="17_DP.cpp" />
     <ClCompile Include="18_RGB_house.cpp" />
     <ClCompile Include="19_Quad.cpp" />
+    <ClCompile Include="20_Sticker.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
