--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="18_RGB_house.cpp" />
     <ClCompile Include="19_Quad.cpp" />
     <ClCompile Include="20_Sticker.cpp" />
+    <ClCompile Include="21_AroundQueue.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
