--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="20_Sticker.cpp" />
     <ClCompile Include="21_AroundQueue.cpp" />
     <ClCompile Include="22_Devide_9_Paper.cpp" />
+    <ClCompile Include="23_DFS_BFS.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
