--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClCompile Include="22_Devide_9_Paper.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="23_DFS_BFS.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
